--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.6",
-    "session-file-store": "^1.5.0"
+    "mongoose": "^6.2.6"
   }
 }
